# oldschool

code/dialer/: .dialer.rc  INSTALL  README  a.out  build  dial_test  dial_test.cc~  dialer  dialer.bak  dialer.cc  dialer.moc  inal1db1.mdb  install.sh  test2.cc  test2.cc~  ttyS1.txt
code/dialer/kdesdk/kdedoc/: Makefile.in  README  Version  configure  configure.in  kdoc  kdoc.lsm  kdocHTML.pm  kdocMan.pm
code/dialer/kdesdk/kdedoc/doc/: CREDITS  example.h  kdoc.html
code/dialer/kdesdk/kdesgmltools/: Makefile.am  Makefile.in  Makefile.old  README  configure  configure.in  fmt_html.pl  kdemapping  niceHtml2Html.pm  nicemapping
code/dialer/kdesdk/kdesgmltools/doc/: Makefile.in
code/dialer/kdesdk/kdesgmltools/doc/en/: Makefile.am  Makefile.in  ksgml2html-1.html  ksgml2html-2.html  ksgml2html-3.html  ksgml2html.html  ksgml2html.nif  ksgml2html.sgml
code/dialer/kdesdk/kdesgmltools/doc/extra/: UserGuide-1.html  UserGuide-2.html  UserGuide-3.html  UserGuide-4.html  UserGuide-5.html  UserGuide-6.html  UserGuide-7.html  UserGuide-8.html  UserGuide.html  UserGuide.nif  UserGuide.sgml
code/dialer/kdesdk/kdesgmltools/img/: Makefile.am  Makefile.in
code/dialer/kdesdk/kdialer/kdialer/: Makefile.am
code/monop/: API  Makefile  Makefile~  NEWS  README  cards.c  cards.h  cards.us  client  client~  commands.h  config.c  config.h  game.c  game.h  globals.h  init.c  init.h  io.c  io.h  misc.c  misc.h  monop.c  monop.h  network.c  network.h  parsers.c  parsers.h  strings.c  strings.h
hro/: CIMDROOM Superserver Project.doc  Plan van Aanpak KMonop.doc  geluidskaart.txt
hro/afstudeer/: GeneralXS.doc  MarketXS.ppt  QuoteXS.doc  marketxs.doc  quotexs.doc
hro/bnvonline/: BNV_AddOutlets.java  BNV_CheckSyntax.java  BNV_Constants.java  BNV_DeleteOutlet.java  BNV_EditOutlet.java  BNV_ErrorPage.java  BNV_FloorExtractor.java  BNV_ListOutlets.java  BNV_LoginUser.java  BNV_Randomize.java  BNV_SessionDead.java  BNV_SessionIndex.java  BNV_SessionLogout.java  BNV_SessionStamp.java  BNV_SessionStart.java  BNV_SessionWelcome.java  BNV_ZoekOutlets.java  Data Dictionary.doc  OutLets_1e_Verd.xls  OutLets_2e_Verd.xls  OutLets_3e_Verd.xls  OutLets_4e_Verd.xls  OutLets_5e_Verd.xls  OutLets_6e_Verd.xls  bnv_outlet.sql  bnv_session.sql  bnv_sessionlog.sql  bnvuser.sql  import.mdb  standaard.html
hro/tc/progs/: 1-10.c  (+52 more)
megalan/: deelnemers.php3  form.php3  login.php3  userEdit.php3
megalan/admin/: .htaccess  .htaccess~  .htaccess~~  DEADJOE  config.inc  deelnemer.php3  edit.inc  index.php3  index.txt  javascript.inc  layout.inc  layout.old.inc  login.inc  loginpopup.inc  mailing.php3  mails.inc  mails.inc~  popup1.inc  stats.php3
megalan/images/: images
vu/: grade_average.sxc  grades.txt
vu/compiler_construction/: BookList.ps  ExamTopics  Handouts.html  StudyGuide.html  course.html
vu/computer_graphics/: course.html  course.php  exam260105.php  excursion.php  exercises.php  faq.php  grading.php  halloffame.php  links.php  practicum.php
vu/computer_networks/: application-multicast.tgz  midterm-results.htm  networks.html  sim.tgz  vrijstelling.txt
vu/computers_in_de_samenleving/: VU_CidS_College_ecommerce_12_11_02.PPT  VU_IT_contracten_en_aansprakelijkheid_CidS_26_11_02.PPT  auteursrecht2002_bb.ppt  spam_2002.ppt
vu/distributed_algorithms/: course.html  hertentamen2003.ps  mail.txt  slides.ps  tentamen2003.ps  trial-exam.txt
vu/evolutionary_computing/: eas-eng.html  finalmarks_anon.xls
vu/inleiding_logica/: course.html  stof.html  tentamen001218.ps  tentamenstof.html  uitwerkingen001218.txt  vbtoets.ps  werkcollege.html
vu/inleiding_theoretische_informatica/: Typos.ps  course.html  lc.html  pa.html
vu/internet_programming/: assignment_1.tgz  assignment_2.tgz  assignment_3.tgz  assignment_4.tgz  assignment_5.tgz  course_and_grades.html
vu/kansrekening_1_bwi/: bron.txt  kans1bwi.html
vu/literature_study/: Dies-2001-mod.ppt  Literature.ps  Service Oriented Architectures.ppt  effective_powerpoint.htm  email.txt  literature.sxw  literature_study.html  litview.html
vu/network_security/: clock.ps  course.html
vu/object_oriented_software_development/: OOSD - Layering Financial Market Data.ps  OOSD - Layering Financial Market Data.sxw  papers.html
vu/parallel_programming/: TentApr02.ps  TentApr02_anwsers.txt  grading.txt  pp.tar
vu/practicum_bedrijfssystemen/: bs.txt  config-note.html  exercise_1_profiling.html  gen_info.html  mail.txt  mnx_diff.1.html  mnx_fresh.1.html  resultaat.txt  syscall.html
(+1464 files in other folders)
