
AUTOMAKE_OPTIONS = foreign  

nice_DATA = niceHtml2Html.pm
nicedir = $(sgml_prefix)/SGMLTools

fmt_DATA = fmt_html.pl
fmtdir = $(sgml_prefix)/dist

map_DATA = nicemapping
mapdir = $(sgml_prefix)/dist/linuxdoc/html

texmap_DATA = kdemapping
texmapdir = $(sgml_prefix)/dist/sgmltool/latex2e


SUBDIRS = img bin doc

